--- a/index.html
+++ b/index.html
@@ -132,21 +132,15 @@
       <!-- Action Buttons -->
       <div class="hero-btns">
         <!-- Apply Now -->
-        <a class="btn btn-primary hero-btn"
+        <a class="btn btn--primary hero-btn" 
           target="_blank" rel="noopener"
           href="https://docs.google.com/forms/d/e/1FAIpQLScMgIgvs0fhy520HeA-aDZCrtfYprspWlODNZ8Khom50pzGuA/viewform?usp=sharing">
           Apply Now
         </a>
 
         <!-- Our Offerings -->
-        <a href="#services" class="btn btn-secondary hero-btn">
-          Our Offerings
-        </a>
+        <a class="btn btn--secondary hero-btn" href="#services">Our Offerings</a>
 
-        <!-- Meet Sthir Mind -->
-        <!-- <a href="#about" class="btn btn-secondary hero-btn">
-          Meet Sthir Mind
-        </a> -->
       </div>
     </div>
   </section>
@@ -197,9 +191,194 @@
     </div>
   </section>
 
-  <!-- 12-Week Road Map -->
-  <!-- place this right after the Hero section -->
+<!-- 12-Week Road Map -->
 <section id="roadmap" class="roadmap-section">
+  <style>
+    /* =========================
+       12-Week Roadmap (Production)
+       ========================= */
+
+    :root{
+      --rm-card-radius: 20px;
+      --rm-shadow-sm: 0 6px 18px rgba(15,23,42,.08);
+      --rm-shadow-md: 0 12px 32px rgba(15,23,42,.12);
+      --rm-border: #dbe3ef;
+      --rm-ink: #0b1b3a;
+      --rm-ink-2: #334155;
+      --rm-grid: rgba(0,0,0,.05);
+      --rm-sep: #94a3b8;
+      --rm-bg: var(--brand-bg, #eef2ff);
+    }
+
+    /* Section shell */
+    .roadmap-section{
+      position: relative;
+      background: var(--rm-bg);
+      padding: clamp(3rem, 6vw, 4.5rem) 0;
+      /* performance: only render when scrolled into view */
+      content-visibility: auto;
+      contain-intrinsic-size: 800px; /* fallback size to avoid layout jank */
+    }
+
+    /* Subtle, lightweight grid (cheaper than conic) */
+    .roadmap-section::before{
+      content:"";
+      position:absolute; inset:0;
+      pointer-events:none;
+      background:
+        repeating-linear-gradient(
+          0deg, var(--rm-grid) 0 1px, transparent 1px 16px
+        ),
+        repeating-linear-gradient(
+          90deg, var(--rm-grid) 0 1px, transparent 1px 16px
+        );
+      opacity:.18;
+    }
+
+    /* Head */
+    .roadmap-head{ text-align:center; max-width:900px; margin:0 auto 1.1rem; }
+    .roadmap-head .section-title{ margin-bottom:.35rem; }
+    .roadmap-subtitle{ color:var(--rm-ink-2); font-size:1.05rem; }
+
+    /* Card with roadmap */
+    .roadmap-map{
+      position:relative;
+      border-radius:var(--rm-card-radius);
+      overflow:hidden;
+      background:var(--rm-bg);
+      box-shadow: var(--rm-shadow-sm), inset 0 1px 0 rgba(255,255,255,.75);
+      padding-bottom:160px; /* space for floating panel */
+      isolation:isolate; /* keeps overlay/panel stacking predictable */
+    }
+
+    /* crisp, very faint inner texture (optional) */
+    .roadmap-map::before{
+      content:"";
+      position:absolute; inset:0;
+      pointer-events:none;
+      background:
+        repeating-linear-gradient(
+          0deg, rgba(0,0,0,.06) 0 1px, transparent 1px 14px
+        ),
+        repeating-linear-gradient(
+          90deg, rgba(0,0,0,.06) 0 1px, transparent 1px 14px
+        );
+      opacity:.10;
+    }
+
+    /* Full-height phase separators (overlay only) */
+    .phase-sep-overlay{
+      position:absolute; inset:0; z-index:2; pointer-events:none;
+    }
+    .phase-sep-overlay span{
+      position:absolute; top:0; bottom:0; width:2px;
+      /* smoother than dashed borders; scales well */
+      background:
+        repeating-linear-gradient(
+          to bottom,
+          var(--rm-sep) 0 8px,
+          transparent 8px 18px
+        );
+      opacity:.75;
+      transform: translateX(-1px); /* center 2px column on left position */
+    }
+
+    /* SVG */
+    #roadSvg{ width:100%; height:auto; display:block; }
+    #roadBase{
+      stroke:#e5edf7; stroke-width:64;
+      stroke-linecap:round; stroke-linejoin:round; fill:none;
+    }
+    #roadDash{
+      stroke:#ffffff; stroke-width:8;
+      stroke-linecap:round; stroke-dasharray:10 18;
+      opacity:.98; fill:none;
+    }
+
+    /* Waypoints */
+    .waypoint circle{
+      stroke:#94a3b8; stroke-width:2; cursor:pointer;
+      transition: transform .12s ease, r .12s ease, opacity .12s ease;
+      will-change: transform;
+    }
+    .waypoint[data-phase="1"] circle{ fill:#7dd3fc; }
+    .waypoint[data-phase="2"] circle{ fill:#60a5fa; }
+    .waypoint[data-phase="3"] circle{ fill:#a78bfa; }
+    .waypoint:hover circle{ transform:translateY(-2px); }
+    .waypoint[aria-current="step"] circle{ r:11; }
+    .waypoint:focus-visible circle{ outline:none; stroke:#1e3a8a; stroke-width:3; }
+    .wp-num{ fill:var(--rm-ink); font:700 11px/1 var(--font-body); pointer-events:none; }
+    .wp-tag{ fill:#1f2937; font:600 11px/1 var(--font-body); pointer-events:none; }
+
+    /* Info panel */
+    .roadmap-panel{
+      position:absolute; right:18px; bottom:24px; z-index:5;
+      width:min(460px, 95%);
+      background:#fff; color:#0f172a;
+      border:1px solid var(--rm-border); border-radius:16px;
+      padding:1rem 1.1rem 1.15rem;
+      box-shadow: var(--rm-shadow-md);
+    }
+    .roadmap-panel.hidden{ display:none; }
+    .rp-badge{
+      display:inline-flex; align-items:center; justify-content:center;
+      padding:.28rem .7rem; border-radius:999px; font-weight:700; font-size:.95rem; letter-spacing:.015em;
+      background:linear-gradient(93deg, var(--blue, #2563eb) 65%, var(--accent, #4f46e5) 100%);
+      color:#fff; margin-bottom:.4rem;
+    }
+    .roadmap-panel h3{ margin:.2rem 0 .6rem; font-size:1.22rem; color:var(--rm-ink); font-weight:700; }
+    .rp-list{ margin:0; padding-left:1.1rem; }
+    .rp-list li{ margin:.38rem 0; color:var(--rm-ink-2); font-size:.98rem; line-height:1.45; }
+
+    /* Arrows */
+    .roadmap-arrow{
+      position:absolute; top:50%; transform:translateY(-50%);
+      width:46px; height:46px; border-radius:50%;
+      display:flex; align-items:center; justify-content:center;
+      background:#ffffffcc; border:1px solid #e2e8f0; color:var(--rm-ink);
+      cursor:pointer; z-index:6; backdrop-filter: blur(4px);
+      transition: transform .12s ease, box-shadow .18s ease;
+    }
+    .roadmap-arrow:hover{ transform:translateY(-50%) scale(1.05); box-shadow:0 6px 14px rgba(15,23,42,.1); }
+    .roadmap-arrow:focus-visible{ outline:2px solid #bfdbfe; outline-offset:2px; }
+    .roadmap-prev{ left: clamp(6px, 2vw, 18px); }
+    .roadmap-next{ right: clamp(6px, 2vw, 18px); }
+
+    /* Phase summary cards */
+    .phase-cards{
+      display:grid; gap:1.1rem; margin-top:1.25rem;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+    .phase-card{
+      background:#fff; border:1px solid #e2e8f0; border-radius:16px;
+      padding:1rem 1.1rem; box-shadow: var(--rm-shadow-sm);
+    }
+    .phase-card h3{ margin:.1rem 0 .4rem; font-size:1.12rem; color:var(--rm-ink); }
+    .phase-card p{ margin:0 0 .4rem; color:var(--rm-ink-2); }
+    .phase-card ul{ margin:.2rem 0 0; padding-left:1.1rem; color:#475569; }
+    .phase-card[data-phase="1"]{ border-top:4px solid #7dd3fc; }
+    .phase-card[data-phase="2"]{ border-top:4px solid #60a5fa; }
+    .phase-card[data-phase="3"]{ border-top:4px solid #a78bfa; }
+
+    /* Reduced motion & mobile polish */
+    @media (max-width: 980px){
+      .roadmap-map{ padding-bottom:0; }
+      .roadmap-panel{
+        position:static; width:100%; margin-top:12px;
+        box-shadow: var(--rm-shadow-sm);
+      }
+      .phase-sep-overlay span{ opacity:.6; } /* softer on small screens */
+    }
+
+    @media (prefers-reduced-motion: reduce){
+      .roadmap-arrow,
+      .waypoint circle{
+        transition: none !important;
+        transform: none !important;
+      }
+    }
+  </style>
+
   <div class="container">
     <div class="roadmap-head">
       <h2 class="section-title font-playfair">Your 12-Week Journey</h2>
@@ -207,36 +386,36 @@
     </div>
 
     <div class="roadmap-map">
-      <button class="roadmap-arrow roadmap-prev" aria-label="Previous week">‹</button>
-      <button class="roadmap-arrow roadmap-next" aria-label="Next week">›</button>
+      <button class="roadmap-arrow roadmap-prev" type="button" aria-label="Previous week">‹</button>
+      <button class="roadmap-arrow roadmap-next" type="button" aria-label="Next week">›</button>
 
-      <!-- widened viewBox so the finish label never clips -->
-      <svg id="roadSvg" viewBox="0 0 1680 520" role="img" aria-label="Sthir 12-week roadmap" preserveAspectRatio="xMidYMid meet">
-        <!-- phase separators -->
-        <g class="phase-sep" aria-hidden="true">
-          <line x1="560"  y1="36" x2="560"  y2="500"/>
-          <line x1="1120" y1="36" x2="1120" y2="500"/>
-          <g class="phase-pill"><rect x="260"  y="24" width="230" height="38" rx="12" ry="12"/><text x="375"  y="48" text-anchor="middle">Phase 1 · Anchoring</text></g>
-          <g class="phase-pill"><rect x="820"  y="24" width="230" height="38" rx="12" ry="12"/><text x="935"  y="48" text-anchor="middle">Phase 2 · Exploration</text></g>
-          <g class="phase-pill"><rect x="1380" y="24" width="230" height="38" rx="12" ry="12"/><text x="1495" y="48" text-anchor="middle">Phase 3 · Rooting</text></g>
-        </g>
-
-        <!-- smoother, broader road -->
-        <path id="roadBase" d="M 40 420 C 300 360, 480 300, 660 280 S 1060 320, 1245 290 S 1500 260, 1580 190" />
-        <path id="roadDash" d="M 40 420 C 300 360, 480 300, 660 280 S 1060 320, 1245 290 S 1500 260, 1580 190" />
-
-        <!-- start / finish -->
+      <!-- SVG: decorative parts are aria-hidden; waypoints announced via panel -->
+      <svg
+        id="roadSvg"
+        viewBox="0 0 1680 520"
+        role="img"
+        aria-label="Sthir 12-week roadmap"
+        preserveAspectRatio="xMidYMid meet">
         <g aria-hidden="true">
-          <circle cx="40" cy="420" r="6" fill="#0b1b3a"></circle>
-          <text x="56" y="428" font-size="14" fill="#0b1b3a">Start</text>
-          <text x="1620" y="170" font-size="18" fill="#0b1b3a">🏁 Finish</text>
+          <path id="roadBase" d="M 40 420 C 300 360, 480 300, 660 280 S 1060 320, 1245 290 S 1500 260, 1580 190" />
+          <path id="roadDash" d="M 40 420 C 300 360, 480 300, 660 280 S 1060 320, 1245 290 S 1500 260, 1580 190" />
+          <circle cx="40" cy="420" r="6" fill="var(--rm-ink)"></circle>
+          <text x="53" y="478" font-size="18" fill="var(--rm-ink)">Start</text>
+          <text x="1520" y="170" font-size="18" fill="var(--rm-ink)">🏁 Finish</text>
         </g>
 
         <!-- waypoints injected by JS -->
         <g id="waypoints"></g>
       </svg>
 
-      <!-- info panel -->
+      <!-- full-height separators overlay (single source of truth) -->
+      <div class="phase-sep-overlay" aria-hidden="true">
+        <!-- match your old x=560 and x=1120 in a 1680 viewBox -->
+        <span style="left:33.333%"></span>
+        <span style="left:66.666%"></span>
+      </div>
+
+      <!-- info panel (updated via JS) -->
       <aside id="roadPanel" class="roadmap-panel hidden" aria-live="polite">
         <div class="rp-badge" id="rpWeek">Week 1</div>
         <h3 id="rpTitle">Title</h3>
@@ -244,7 +423,7 @@
       </aside>
     </div>
 
-    <!-- Phase summaries under the map -->
+    <!-- Phase summaries -->
     <div class="phase-cards" aria-label="Phase summaries">
       <article class="phase-card" data-phase="1">
         <h3>Phase 1 · Anchoring</h3>
@@ -277,66 +456,7 @@
   </div>
 </section>
 
-  <section id="roadmap" class="roadmap-section">
-    <div class="container">
-      <div class="roadmap-map">
-        <button class="roadmap-arrow roadmap-prev" aria-label="Previous week">‹</button>
-        <button class="roadmap-arrow roadmap-next" aria-label="Next week">›</button>
 
-        <svg id="roadSvg" viewBox="0 0 1600 520" role="img" aria-label="Sthir 12-week roadmap" preserveAspectRatio="xMidYMid meet">
-          <!-- phase separators -->
-          <g class="phase-sep" aria-hidden="true">
-            <!-- lines (at ~33% and ~66%) -->
-            <line x1="533" y1="36" x2="533" y2="500"/>
-            <line x1="1066" y1="36" x2="1066" y2="500"/>
-            <!-- pills -->
-            <g class="phase-pill">
-              <rect x="250" y="24" width="220" height="38" rx="12" ry="12"></rect>
-              <text x="360" y="48" text-anchor="middle">Phase 1 · Anchoring</text>
-            </g>
-            <g class="phase-pill">
-              <rect x="785" y="24" width="220" height="38" rx="12" ry="12"></rect>
-              <text x="895" y="48" text-anchor="middle">Phase 2 · Exploration</text>
-            </g>
-            <g class="phase-pill">
-              <rect x="1318" y="24" width="220" height="38" rx="12" ry="12"></rect>
-              <text x="1428" y="48" text-anchor="middle">Phase 3 · Rooting</text>
-            </g>
-          </g>
-
-          <!-- smooth S-curve road (broader) -->
-          <path id="roadBase" fill="none"
-                d="M 40 420
-                  C 280 360, 460 300, 640 280
-                  S 1040 320, 1225 290
-                  S 1480 260, 1560 190" />
-          <path id="roadDash" fill="none"
-                d="M 40 420
-                  C 280 360, 460 300, 640 280
-                  S 1040 320, 1225 290
-                  S 1480 260, 1560 190" />
-
-          <!-- start / finish -->
-          <g aria-hidden="true">
-            <circle cx="40" cy="420" r="6" fill="#0b1b3a"></circle>
-            <text x="56" y="428" font-size="14" fill="#0b1b3a">Start</text>
-            <text x="1545" y="165" font-size="18" fill="#0b1b3a">🏁 Finish</text>
-          </g>
-
-          <!-- waypoints injected by JS -->
-          <g id="waypoints"></g>
-        </svg>
-
-        <!-- info panel -->
-        <aside id="roadPanel" class="roadmap-panel hidden" aria-live="polite">
-          <div class="rp-badge" id="rpWeek">Week 1</div>
-          <h3 id="rpTitle">Title</h3>
-          <ul class="rp-list" id="rpList"></ul>
-        </aside>
-      </div>
-    </div>
-  </section>
-  
   <!-- Philosophy Section -->
   <section id="philosophy" class="section philosophy-bg">
     <div class="container" data-aos="fade-up">
